[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleScreenRelated/TitleScreenNew.gd" type="Script" id=1]
[ext_resource path="res://game_over.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreenRelated/logo2 copy.png" type="Texture" id=3]
[ext_resource path="res://TitleScreenRelated/playButton.png" type="Texture" id=4]
[ext_resource path="res://TitleScreenRelated/playButtonFocus.png" type="Texture" id=5]
[ext_resource path="res://TitleScreenRelated/optionsButton.png" type="Texture" id=6]
[ext_resource path="res://TitleScreenRelated/optionsButtonHovered.png" type="Texture" id=7]
[ext_resource path="res://TitleScreenRelated/274787__setuniman__intro-1l72.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = 320.0
margin_right = 239.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 2 )
text = "- Not For Commercial Use -"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 50.0
margin_right = 700.0
margin_bottom = 750.0
size_flags_horizontal = 4
custom_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 400.0
texture = ExtResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 600.0
margin_bottom = 634.0

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 600.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="OptionsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 204.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/PlayButton" to="." method="_on_PlayButton_pressed"]
